Even more master fixes to the `MarathonTest`